--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,11 @@
 :root{
-    --background-color:#e6f1ff;
+    --background-color:#c9dff9;
     --header-color: #206ece;
     --bar: #0073ff;
     --text: #0d2b4f;
-    --links: #b7d7ff;
-    --hover-links:#5ba5ff ;
+    --lighter-text:#20589c;
+    --links: #b8d5ff;
+    --hover-links:#5ba5ff;
 }
 html{
     font-size: 22px;
