Fixed bug with header/footer

--- a/templates/header.html
+++ b/templates/header.html
@@ -4,5 +4,5 @@
   <a href="">Фрайчанзинг</a>
   <a href="">Де купити</a>
   <a href="">Пошук турів</a>
-  <a href="">FAQs</a>
+  <a href="../pages/faq.html">FAQs</a>
 </div>
