upgrades in login html and css

--- a/css/pages/login/general.css
+++ b/css/pages/login/general.css
@@ -21,7 +21,7 @@ body > .login-container {
     width: 65%;
     display: flex;
     margin-top: 8%;
-    box-shadow: 0 4px 14px rgba(0, 0, 0, .5);
+    border: 3px solid var(--text);
     background-color: var(--links);
     border-radius: 10px;
 }
@@ -32,6 +32,14 @@ body > .login-container {
 .login-container > .photo > img {
     width: 100%;
     margin-right: 0;
+    margin-top: 4px;
+    margin-left: 4px;
     box-shadow: 0 4px 14px rgba(0, 0, 0, .5);
-
+    border-radius: 10px;
+    transition: transform 0.3s;
+}
+.login-container > .photo > img:hover {
+    transform: scale(1.01);
+    opacity: .85;
+    box-shadow: 0 4px 14px rgba(0, 0, 0, .8);
 }
