--- a/templates/header.html
+++ b/templates/header.html
@@ -1,8 +1,7 @@
 <img class="logo" src="../images/logo.png" alt="logo">
 <div class="menu-links">
+  <a href="../pages/main.html">Головна</a>
   <a href="">Готелі</a>
-  <a href="">Фрайчанзинг</a>
-  <a href="">Де купити</a>
-  <a href="">Пошук турів</a>
+  <a href="">Контакти</a>
   <a href="../pages/faq.html">FAQs</a>
 </div>
