--- a/css/pages/login/section.css
+++ b/css/pages/login/section.css
@@ -4,11 +4,13 @@
 .text > h1 {
     margin-top: 15%;
     text-align: center;
+    color: var(--text);
 }
 .text > p {
     margin-top: 10%;
     margin-left: 5%;
     margin-bottom: 5%;
+    color: var(--text);
 }
 input {
     margin-bottom: 2%;
@@ -19,14 +21,31 @@ input {
 form{
     position: relative;
 }
-button{
+a{
+    text-align: center;
+    text-decoration: none;
     position: absolute;
     right: 15%;
     margin-top: 7%;
+    padding-top: 3px;
     width: 5rem;
     height: 1.6rem;
     font-size: 1rem;
-    background-color: var(--bar);
+    background-color: var(--text);
     border: 0;
     border-radius: 10px;
+    color: var(--background-color);
+    box-shadow: 4px 4px rgba(0, 0, 0, .5);
 }
+/*button:hover {*/
+/*    position: absolute;*/
+/*    right: 15%;*/
+/*    margin-top: 7%;*/
+/*    width: 5rem;*/
+/*    height: 1.6rem;*/
+/*    font-size: 1rem;*/
+/*    background-color: var(--text);*/
+/*    border: 0;*/
+/*    border-radius: 10px;*/
+/*    color: var(--background-color);*/
+/*}*/
