- added page about us

--- a/templates/header.html
+++ b/templates/header.html
@@ -2,6 +2,6 @@
 <div class="menu-links">
   <a href="../pages/main.html">Головна</a>
   <a href="">Готелі</a>
-  <a href="">Контакти</a>
+  <a href="../pages/about-us.html">Контакти</a>
   <a href="../pages/faq.html">FAQs</a>
 </div>
