finished sighup html and css

--- a/css/pages/signup/general.css
+++ b/css/pages/signup/general.css
@@ -8,7 +8,7 @@
     --hover-links:#5ba5ff;
 }
 html{
-    font-size: 150%;
+    font-size: 120%;
 }
 body {
     display: flex;
@@ -18,28 +18,14 @@ body {
 }
 body > .signup-container {
     /*border: black solid 1px;*/
-    width: 65%;
-    display: flex;
+    width: 60%;
+    /*display: flex;*/
     margin-top: 8%;
     border: 3px solid var(--text);
     background-color: var(--links);
     border-radius: 10px;
 }
-.signup-container > .photo{
-    width: 40%;
+section {
+    width: 100%;
 }
 
-.signup-container > .photo > img {
-    width: 100%;
-    margin-right: 0;
-    margin-top: 4px;
-    margin-left: 4px;
-    box-shadow: 0 4px 14px rgba(0, 0, 0, .5);
-    border-radius: 10px;
-    transition: transform 0.3s;
-}
-.signup-container > .photo > img:hover {
-    transform: scale(1.01);
-    opacity: .85;
-    box-shadow: 0 4px 14px rgba(0, 0, 0, .8);
-}
