added calculations page

--- a/templates/header.html
+++ b/templates/header.html
@@ -3,4 +3,6 @@
   <a href="../pages/main.html">Головна</a>
   <a href="../pages/about-us.html">Контакти</a>
   <a href="../pages/faq.html">FAQs</a>
+  <a href="../pages/chat.html">Чат</a>
+  <a href="../pages/calculations.html">Обчислення</a>
 </div>
