--- a/css/pages/calculations/calculations.css
+++ b/css/pages/calculations/calculations.css
@@ -1,19 +1,50 @@
 .main {
     width: 100%;
+    padding-top: 45px;
 }
 .container {
-    width: 78%;
+    width: 85%;
     margin: 0 auto;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
 }
 .box {
     width: 44%;
-    /*here either leave empty to let text define the height or write it: px or sth else*/
-    /*height: 200px;*/
     padding: 15px;
     border-radius: 15px;
-    border: black solid 1px;
+    border: var(--lighter-text) solid 2px;
     resize: none;
     font-size: 18px;
+}
+h2 {
+    text-align: center;
+    color: var(--text);
+}
+p, label, input {
+    color: var(--text);
+    font-size: 24px;
+    margin-bottom: 0;
+    margin-top: 18px;
+}
+input[type="number"] {
+    width: 120px;
+}
+@media (max-width: 767px) {
+    .container {
+        width: 80%;
+        height: 150vh;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-top: 40px;
+        margin-bottom: 25vh;
+    }
+    .box{
+        width:70%;
+        margin-left: 70px;
+        font-size: 30px;
+    }
+    p, label, input {
+        font-size: 36px;
+    }
 }
