worked on the table.html

--- a/pages/templates/table.html
+++ b/pages/templates/table.html
@@ -1,29 +1,47 @@
+<!--TODO: -container - це такий квадратик, як і форма, який залишається незмінних розмірів
+          - при доданні контенту з'являється скролбар, яким можна прокрутити-->
+<!--TODO: додати функціонал (4 завдання)-->
 <div class="container">
     <div class="fullname">
-        <span class="data-title">ПІБ</span>
-        <span class="data-list"><a href="">Ring Beach 5</a></span>
-        <span class="data-list"><a href="">Loxia Comfort Beach Alanya, 5</a></span>
-        <span class="data-list"><a href="">Tropitel Naama Bay, 5</a></span>
-        <span class="data-list"><a href="">Jaz Mirabel Beach, 5</a></span>
-        <span class="data-list"><a href="">Araliya Beach Hotel, 5</a></span>
-        <span class="data-list"><a href="">Gortyna Hotel, 3</a></span>
+        <span class="data-title">Прізвище</span>
+        <span class="data-list">П'ятигорець</span>
+        <span class="data-list">П'ятигорець</span>
     </div>
     <div class="email">
-        <span class="data-title">Електрона пошта</span>
-        <span class="data-list">20 300</span>
-        <span class="data-list">32 089</span>
-        <span class="data-list">20 075</span>
-        <span class="data-list">21 749</span>
-        <span class="data-list">51 000</span>
-        <span class="data-list">23 469 </span>
+        <span class="data-title">Ім'я</span>
+        <span class="data-list">Данило</span>
+        <span class="data-list">Данило</span>
+
     </div>
     <div class="phone">
-        <span class="data-title">Номер телефону</span>
-        <span class="data-list">2023-10-05</span>
-        <span class="data-list">2023-10-05</span>
-        <span class="data-list">2023-10-05</span>
-        <span class="data-list">2023-10-05</span>
-        <span class="data-list">2023-10-05</span>
-        <span class="data-list">2023-10-05</span>
+        <span class="data-title">По батькові</span>
+        <span class="data-list">Дмитрович</span>
+        <span class="data-list">Дмитрович</span>
+    </div>
+    <div class="phone">
+        <span class="data-title">Електронна пошта</span>
+        <span class="data-list">pyatigorets2005@gmail.com</span>
+        <span class="data-list">pyatigoreйуплгрпшйгмts2005@gmail.com</span>
+
+    </div>
+    <div class="phone">
+        <span class="data-title">Телефон</span>
+        <span class="data-list">+3800676901978</span>
+        <span class="data-list">+3800676901978</span>
+    </div>
+    <div class="phone">
+        <span class="data-title">Пароль</span>
+        <span class="data-list">password</span>
+        <span class="data-list">password</span>
+    </div>
+    <div class="phone">
+        <span class="data-title">Дата народження</span>
+        <span class="data-list">20/07/2005</span>
+        <span class="data-list">20/07/2005</span>
+    </div>
+    <div class="phone">
+        <span class="data-title">Стать</span>
+        <span class="data-list">Чоловік</span>
+        <span class="data-list">Чоловік</span>
     </div>
 </div>
