--- a/css/templates/table.css
+++ b/css/templates/table.css
@@ -1,10 +1,17 @@
-.container {
+.table-container {
     display: flex;
-    width: 100%;
-    padding-top: 8px;
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 50px;
+    border: 3px solid var(--text);
+    background-color: var(--links);
+    border-radius: 10px;
+    overflow: auto;
+    white-space: nowrap;
 }
-.container .fullname, .email, .phone {
+.surname, .name, .middlename, .email, .phone, .password, .tabledate, .tablegender, .checkbox, .copy, .delete {
+    white-space: nowrap;
     display: flex;
     flex-direction: column;
-    margin: 0 15px;
+    margin: 10px 30px;
 }
